# Kiosk

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config_example.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
3d_model/: display.stl  lid.stl  nfc_holder.stl
assets/: alembic_env_example.py
src/: app_context.py  main.py
src/custom_email/: __init__.py  email_controller.py  email_manager.py
src/custom_email/templates/: base.html
src/database/: __init__.py  connection.py  crud_mixin.py
src/database/models/: item.py  transaction.py  user.py
src/email/: email_controller.py  email_manager.py
src/email/templates/: base.html  low_balance_de.html  low_balance_en.html  monthly_summary_de.html  monthly_summary_en.html  product_low_stock_de.html  product_low_stock_en.html
src/localization/: __init__.py  translator.py
src/localization/locales/: de.json  en.json
src/lock/: __init__.py  gpio_manager.py  lock.py
src/logmgr/: __init__.py  logmgr.py
src/mattermost/: __init__.py  mattermost_controller.py  mattermost_manager.py
src/messaging/: __init__.py  base_messaging_controller.py  messaging_manager.py  utils.py
src/messaging/email/: __init__.py  email_controller.py  email_manager.py
src/messaging/email/templates/: base.html  low_balance_de.html  monthly_summary_de.html  monthly_summary_en.html  product_low_stock_en.html
src/messaging/mattermost/: __init__.py  mattermost_controller.py  mattermost_manager.py
src/nfc_reader/: __init__.py  nfc_reader.py
src/sounds/: __init__.py  sound_controller.py  sound_manager.py
src/ui/: kiosk_theme.json  navigation.py
src/ui/components/: AdminPurchaseItems.py  Barcode.py  ChangeQuantityFrame.py  Confirmation.py  CountFrame.py  CreditFrame.py  HeadingFrame.py  ItemFrame.py  Message.py  QuantityFrame.py  ScanCard.py  UserFrame.py  change_quantity_frame.py  credit_frame.py  ctkchart.py  dashboard_card_frame.py  heading_frame.py  info_card_frame.py  item_form.py  item_frame.py  quantity_frame.py  scan_card.py  user_form.py  user_frame.py
src/ui/screens/: AdminMain.py  ItemListing.py  NewItem.py  NewUser.py  UpdateItem.py  UpdateUser.py  UserListing.py  UserMain.py  WelcomePage.py  admin_main.py  item_listing.py  new_item.py  new_user.py  update_item.py  update_user.py  user_listing.py  user_main.py  welcome_page.py
src/utils/: config.py  paths.py
utils/: db_backup.sh  db_migration.py  docker-compose.example.yaml  kiosk.service
