[tool.poetry]
name = "kiosk"
version = "0.1.0"
description = "Sofware for a raspberry pi to work as a custom cash register system"
authors = ["Matthias Duve <morzan1001@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.2"
sqlalchemy = "^2.0.44"
py532lib = { git = "https://github.com/Liam-Deacon/py532lib.git" }
gpiod = "^2.4.0"
APScheduler = "^3.11.1"
jinja2 = "^3.1.6"
pillow = "^12.0.0"
sounddevice = "^0.5.3"
soundfile = "^0.13.1"
numpy = "^2.3.4"
scipy = "^1.16.3" 
requests = "^2.32.3" 
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
alembic = "^1.17.1" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
