[tool.poetry]
name = "kiosk"
version = "0.1.0"
description = "Sofware for a raspberry pi to work as a custom cash register system"
authors = ["Matthias Duve <morzan1001@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.2"
sqlalchemy = "^2.0.51"
py532lib = { git = "https://github.com/Liam-Deacon/py532lib.git" }
gpiod = { version = "^2.5.0", markers = "sys_platform == 'linux'" }
APScheduler = "^3.11.3"
jinja2 = "^3.1.6"
pillow = "^12.2.0"
sounddevice = "^0.5.5"
soundfile = "^0.14.0"
numpy = "^2.4.6"
scipy = "^1.17.1" 
requests = "^2.34.2" 
psycopg2-binary = "^2.9.12"

[tool.poetry.group.dev.dependencies]
alembic = "^1.18.5" 
pylint = "^4.0.6"
flake8 = "^7.3.0"
black = "^26.5.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["alembic"]

[tool.pylint.format]
max-line-length = 100

